--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <tr>
-      <td>  <img src="images/circle-croppedschnauzer.png" alt="Schnauzer picture" height="200"></td>
+      <td>  <img src="https://amvnet.github.io/webdev/images/circle-croppedschnauzer.png" alt="Schnauzer picture" height="200"></td>
       <td>  <h1>Craig</h1>
         <p>
           <em>Founder of <strong><a href="https://yahoo.com">AMV Network Solutions</a></strong>.</em>
