--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td>  <img src="/images/circle-croppedschnauzer.png" alt="Schnauzer picture" height="200"></td>
       <td>  <h1>Craig</h1>
         <p>
-          <em>Founder of <strong><a href="https://yahoo.com">AMV Network Solutions</a></strong>.</em>
+          <em>Founder of <strong><a href="https://yahoo.com">Where da money resides</a></strong>.</em>
         </p>
         <p>
           I am an IOS and Web Developer. I am also a master network professional
